# PortfolioWebsite

./: CMakeLists.txt  CMakePresets.json  README.md  config.json  dockerfile  main.cc
controllers/: PortfolioController.cc  PortfolioController.h
docker_utils/: transfer_container.ps1  update_container.ps1  update_prod_container.ps1
pages/: about.html  common.js  contact.html  home.html  projects.html  resume.html  skills.html  style.css
pages/assets/css/: style.css
pages/assets/js/: carousel.js  common.js  software_architecture.js
test/: CMakeLists.txt
